--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Starbucks</title>
     <link rel="stylesheet" href="/css/style.css">
+    <script src="/js/script.js"></script>
 </head>
 <body>
     <section>
@@ -30,9 +31,9 @@
             </div>
         </div>
         <ul class="thumb">
-            <li><img src="/images/thumb1.png" alt=""></li>
-            <li><img src="/images/thumb2.png" alt=""></li>
-            <li><img src="/images/thumb3.png" alt=""></li>
+            <li><img src="/images/thumb1.png" onclick="imgSlider('/images/img1.png');changeCircleColor('#017143')"></li>
+            <li><img src="/images/thumb2.png" onclick="imgSlider('/images/img2.png');changeCircleColor('#eb7495')"></li>
+            <li><img src="/images/thumb3.png" onclick="imgSlider('/images/img3.png');changeCircleColor('#d752b1')"></li>
         </ul>
         <ul class="sci">
             <li><a href="#"><img src="/images/facebook.png" alt=""></a></li>
